crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_handle_included_file_and_disable_linter.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": {
    "includes": ["test.js", "special/**"]
  },
  "overrides": [{ "includes": ["special/**"], "linter": { "enabled": false } }]
}
```

## `special/test2.js`

```js
(1 >= -0)
```

## `test.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
