crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_include_file_with_different_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    },
    {
      "includes": ["test2.js"],
      "linter": {
        "rules": {
          "complexity": {
            "useSimpleNumberKeys": "error"
          }
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger
```

## `test2.js`

```js
({ 1: 1 });
```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 1 file.
```
