crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_include_file_with_different_rules.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["special/**"],
      "linter": {
        "rules": {
          "suspicious": { "noDebugger": "off" }
        }
      }
    }
  ]
}
```

## `special/test2.js`

```js
debugger
```

## `test.js`

```js

```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 1 file.
```
