crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_not_conceal_overrides_globals.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  },
  "overrides": [
    {
      "includes": ["*.js"],
      "javascript": { "globals": ["GLOBAL_VAR"] }
    },
    {
      "includes": ["*.js"]
    }
  ]
}
```

## `test.js`

```js
export { GLOBAL_VAR };
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
