crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_override_groupe_recommended.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "recommended": true
      }
    }
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "recommended": false
          }
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger
```

## `test2.js`

```js

```

# Emitted Messages

```block
Checked 3 files in <TIME>. Fixed 1 file.
```
