crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_override_the_rules.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger
```

## `test2.js`

```js

```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 1 file.
```
