crates/check_cli/tests/snapshots/main_cases_overrides_linter/does_preserve_group_recommended_when_override_global_recommended.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "recommended": false
      }
    }
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "recommended": true
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger
```

## `test2.js`

```js
debugger
```

# Emitted Messages

```block
Checked 3 files in <TIME>. No fixes applied.
```
